--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,27 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
+  overflow: hidden;
+  background: linear-gradient(black, black), url(background.jpg);
+  background-size: cover;
+  background-blend-mode: saturation;
+}
+
+#root {
   min-height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
-  background: #333;
 }
 
 .container {
-  background: rgba(0, 0, 0, 0.7);
-  padding: 30px;
+  background: rgba(0, 0, 0, 0.9);
+  padding: 10px;
+  width: 70%;
+  border: 1px solid white;
   border-radius: 20px;
   display: flex;
   flex-direction: column;
@@ -20,7 +32,8 @@ body {
 form {
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
+  margin: 15px 0;
+  width: 80%;
 }
 
 #button-container {
@@ -33,25 +46,63 @@ input,
 button {
   margin: 10px 5px;
   padding: 5px 5px;
+  border-radius: 10px;
+  text-align: center;
+}
+
+button {
+  background: rgba(0, 0, 0, 0.8);
+  color: white;
+  border: 1px solid white;
+  padding: 10px 20px;
 }
 
 .name {
   display: flex;
 }
 
+#firstName,
+#lastName {
+  width: 45%;
+}
+
+#placeHolder {
+  display: none;
+  margin-top: 20px;
+}
+
 .info {
   color: white;
   font-size: 1.2rem;
-  margin: 20px 10px 0 10px;
+  margin-top: 20px;
   text-align: center;
 }
 
+#bottom {
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
 @media screen and (min-width: 1000px) {
-  .container {
-    flex-direction: row;
+  #root {
+    flex-direction: column;
   }
 
+  .container {
+    flex-direction: row;
+    width: auto;
+    padding: 50px;
+  }
+
+  #firstName,
+  #lastName {
+    width: 100%;
+  }
+
+  form,
   .info {
     margin-left: 50px;
+    width: 100%;
   }
 }
