--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,8 @@ body {
 
 .container {
   background: rgba(0, 0, 0, 0.9);
-  padding: 10px;
-  width: 70%;
+  padding: 30px 20px;
+  width: 80%;
   border: 1px solid white;
   border-radius: 20px;
   display: flex;
@@ -32,8 +32,7 @@ body {
 form {
   display: flex;
   flex-direction: column;
-  margin: 15px 0;
-  width: 80%;
+  width: 100%;
 }
 
 #button-container {
@@ -45,7 +44,7 @@ form {
 input,
 button {
   margin: 10px 5px;
-  padding: 5px 5px;
+  padding: 10px 10px;
   border-radius: 10px;
   text-align: center;
 }
@@ -68,13 +67,12 @@ button {
 
 #placeHolder {
   display: none;
-  margin-top: 20px;
+  margin: 20px 0;
 }
 
 .info {
   color: white;
   font-size: 1.2rem;
-  margin-top: 20px;
   text-align: center;
 }
 
@@ -87,12 +85,13 @@ button {
 @media screen and (min-width: 1000px) {
   #root {
     flex-direction: column;
+    transform: scale(1.7);
   }
 
   .container {
     flex-direction: row;
     width: auto;
-    padding: 50px;
+    padding: 30px 60px;
   }
 
   #firstName,
@@ -100,9 +99,18 @@ button {
     width: 100%;
   }
 
+  #placeHolder {
+    margin: 0;
+    margin-right: 50px;
+  }
+
+  input {
+    padding: 5px 5px;
+  }
+
   form,
   .info {
-    margin-left: 50px;
     width: 100%;
+    margin: 0;
   }
 }
